# canvas-tools

./: .gitignore  Makefile  README.md  canvas.py  pyproject.toml
canvas_tools/: __init__.py  canvas.py  cli.py
edu-tools/: pyproject.toml
src/edu_tools/: __init__.py  aws.py  canvas.py  cli.py  google.py
src/edutools/: aws.py  canvas.py  cli.py  google_helpers.py  gui.py  iam.py
tests/: test_canvas.py  test_google_docs.py  test_iam.py  test_integration.py
